attempting to fix spacing

--- a/src/style/sass/_home.scss
+++ b/src/style/sass/_home.scss
@@ -50,7 +50,7 @@
 }
 
 .skills {
-    padding: 20px 80px 20px 80px;
+    gap: 160px;
     display: flex;
     .skills-header {
         background: white;
