--- a/src/style/style.css
+++ b/src/style/style.css
@@ -257,7 +257,7 @@ p {
 }
 
 .skills {
-  padding: 20px 80px 20px 80px;
+  gap: 160px;
   display: flex;
 }
 .skills .skills-header {
